# async-neuronal-network

./: .gitignore  READme.md  pyproject.toml
neuron_net/config/: config.yaml
neuron_net/config/utils/: config_loader.py
neuron_net/src/doc/adr/: Overview.md
neuron_net/src/math/: constants.py  spiking_algorithms.py
neuron_net/src/models/: Cluster.py  Network.py  Neuron.py  Spike.py  WeightUpdate.py  simulation.py
neuron_net/src/tests/: conftest.py  test_network.py  test_neuron.py
