[project]
name = "neuron_net"
version = "0.1.0"
description = "My first custom neural network"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = ["pytest",
    "pytest-cov",
    "tomli",
    "pytest-mock",
    "pytest-randomly",
    "pytest-xdist",
    "pytest-json-report",
]
